# sat-cfdis

./: .env.example  .gitignore  .gitmodules  CODEBASE_GUIDE.md  Cargo.toml  README.md  justfile  prepare_ec2.sh
migrations/: 001_sync_jobs.sql  002_cfdis.sql  003_fix_int_types.sql  004_normalize_uuids.sql  005_create_users_table.sql  006_add_initial_sync_job.sql  007_add_normalization_label.sql  008_cfdi_uuid_normalization.sql  009_multi_rfc.sql  010_soft_delete_rfcs.sql  011_add_google_id.sql  012_add_total_neto_mxn.sql  013_backfill_subtotal_from_total.sql  014_etl_perf_indexes.sql  015_drop_is_admin_column.sql  016_fix_subtotal_iva_backfill.sql  017_fix_estado_sat_from_metadata.sql  018_fix_estado_sat_xml_records.sql  019_rfc_sharing.sql  020_cfdi_relacionados.sql  021_fix_enrichment_join_index.sql  022_normalization_v2.sql  023_cfdi_nomina_otros_pagos.sql  024_composite_indexes.sql  025_is_cancelled_column.sql  026_users_created_at.sql
php-cli/: composer.json
scripts/: auto_jira.py  download_cfdi.sh
src/: api_docs.rs  config.rs  errors.rs  main.rs  state.rs
src/db/: cfdis.rs  jobs.rs  mod.rs  subscriptions.rs  users.rs
src/models/: auth.rs  invoice.rs  mod.rs
src/routes/: analytics.rs  auth.rs  billing.rs  invoices.rs  mod.rs  queue.rs  users.rs  web.rs
src/services/: crypto.rs  email.rs  etl.rs  fiel.rs  mod.rs  php_cli.rs  s3.rs  storage.rs  xml_parser.rs
src/services/analytics/: cashflow.rs  concepts.rs  counterparties.rs  fiscal.rs  geography.rs  hallazgos.rs  mod.rs  normalization.rs  payments.rs  payroll.rs  period_comparison.rs  quarterly.rs  recurrence.rs  retention.rs  summary.rs  xml_breakdown.rs  xml_count.rs
static/: analytics.js  app.css  app.js
templates/: analytics.html  base.html  error.html  index.html  invoices.html
