[package]
name = "pulso-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tempfile = "3"
zip = "2"
anyhow = "1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
tera = "1"
actix-files = "0.6"
actix-multipart = "0.7"
futures-util = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "migrate",
] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
quick-xml = { version = "0.37", features = ["async-tokio"] }
actix-cors = "0.7"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
], default-features = false }
utoipa = { version = "5" }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }
